--- a/findly-builder/src/app/components/business-rules/business-rules.component.scss
+++ b/findly-builder/src/app/components/business-rules/business-rules.component.scss
@@ -1,4 +1,4 @@
-
+@import './../../../app/scss/variables/variables.scss';
 .business-rules-wrapper{
     height: calc(100vh - 61px);
     .header-sec{
@@ -101,6 +101,53 @@
                     top: -1px;
                 }
             }
+        }
+    }
+    .mainLoadingSpinner{
+        position: absolute;
+        background:  transparent;
+        width: 223px;
+        height: 40px;
+        padding-top: 10px;
+        border-radius: 4px;
+        opacity: 0.95;
+        padding-left: 5px;
+        width: 100%;
+        .please-wait-message {
+            position: relative;
+            color: #29293b;
+            top: -16px;
+            left: 25px;
+            font-size: 12px;
+        }  
+    }
+    .empty-rules{
+        width: 320px;
+        margin: 0 auto;
+        // height: calc(100% - 60px);
+        text-align: center;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column;                       
+        -webkit-box-pack: center;                       
+        -ms-flex-pack: center;                       
+        justify-content: center;   
+        height: calc(100vh - 225px);
+        img{
+            width: 75%;
+            margin: 0 auto;
+        }     
+        .heading{
+            margin: 18px 0 8px 0;
+            color: $primaryColor;
+        }
+        .desc{
+            color: $secondaryColor;
+            font-size: 14px;
         }
     }
     .table_section{
