--- a/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
@@ -9961,18 +9961,18 @@ body.demo .finalResults .task-wrp:nth-child(n+3) {
     font-weight: 600;
     font-style: normal;
 }
-.custom-matched-results-container {
+/*.custom-matched-results-container {
     display: none;
-    /* position: absolute; */
+    position: absolute;
     position: relative;
     width: calc(100% - 70%);
     height: fit-content;
-    /* border: 1px solid red; */
+    border: 1px solid red;
     left: 70%;
     margin-top: -35px;
     padding: 10px;
     text-align: center;
-}
+}*/
 .custom-matched-results-page-icon {
     display: inline-block;
     width: fit-content;
