--- a/findly-builder/src/assets/web-kore-sdk/demo/custom/customFindly.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/custom/customFindly.css
@@ -229,10 +229,10 @@ img.logo-img{
     right: 255px !important;
     left: auto !important;
   } 
-  .show_insights{
+  /* .show_insights{
     top: 14px !important;
     right: 15px !important;
-  }
+  } */
 .matched-faq-containers .faqs-shadow .faqs-wrp-content.custom-faqs-wrp-content-border .title{
   white-space: normal !important;
   max-width: 65% !important;
