--- a/findly-builder/src/app/components/content-source/content-source.component.html
+++ b/findly-builder/src/app/components/content-source/content-source.component.html
@@ -439,7 +439,7 @@
                             <li (click)="urlCondition('Begins with', 'allow')"><a>Begins with</a></li>
                             <li (click)="urlCondition('Ends with', 'allow')"><a>Ends with</a></li>
                             <li (click)="urlCondition('Contains', 'allow')"><a>Contains</a></li>
-                            <li (click)="urlCondition(doesntContains, 'allow')"><a>Doesn't Contains</a></li>
+                            <li (click)="urlCondition(doesntContains, 'allow')"><a>Doesn't contain</a></li>
                           </ul>
                         </div>
                       </div>
@@ -486,7 +486,7 @@
                             <li (click)="urlCondition('Begins with', 'block')"><a>Begins with</a></li>
                             <li (click)="urlCondition('Ends with', 'block')"><a>Ends with</a></li>
                             <li (click)="urlCondition('Contains', 'block')"><a>Contains</a></li>
-                            <li (click)="urlCondition(doesntContains, 'block')"><a>Doesn't Contains</a></li>
+                            <li (click)="urlCondition(doesntContains, 'block')"><a>Doesn't contain</a></li>
                           </ul>
                         </div>
                       </div>
