--- a/findly-builder/src/app/components/app-header/app-header.component.scss
+++ b/findly-builder/src/app/components/app-header/app-header.component.scss
@@ -68,6 +68,56 @@
                 top: 15px;
                 border-radius: 50%;
               }
+              &.kr-sg-dropdowns{
+                width: auto;
+                .dropdown-open {
+                  .dropdown-input{
+                    border: 0;
+                    padding-left: 0;
+                    text-transform: uppercase;
+                    color: #202124;
+                    border-bottom: 0px solid #fff;
+                    cursor: pointer;
+                    font-weight: 600;
+                    font-size: 12px;
+                    outline: none;
+                    position: relative;
+                    transition: 0.3s all ease;
+                    &::before{
+                      right: 4px !important;
+                      width: 12px !important;
+                      background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAwAAAAHCAYAAAA8sqwkAAAACXBIWXMAAAsTAAALEwEAmpwYAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAABbSURBVHgBhY9tDcAgEEMrYRKQMElIQAIS5gwJkzAJtyP0Ej5y8JImUF5/ADSS5oJPfYt2qQfRFE1w5EInWfmweKdRYCd0BvI06uUMBxt9zFY2IkVB99ETN7PwA8d/F5/yK146AAAAAElFTkSuQmCC');
+                    }
+                  }
+                  &.show{
+                    &::before{
+                      content: "";
+                      position: absolute;
+                      width: calc(100% + 10px);
+                      border-bottom: 2px solid #0D6EFD;
+                      bottom: 0;
+                      left: -5px;
+                    }
+                  }
+                  .content-width{
+                    left: -30px;
+                    background: #FFFFFF;
+                    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.25);
+                    border-radius: 4px;
+                    border: 0;
+                    min-width: 175px;
+                    li{
+                      a{
+                        text-transform: capitalize;
+                        font-weight: normal;
+                        color: #000000;
+                        font-size: 14px;
+                        padding: 0 20px;
+                      }
+                    }
+                  }
+                }
+              }
           }
         }
       }
