--- a/findly-builder/src/app/components/app-header/app-header.component.html
+++ b/findly-builder/src/app/components/app-header/app-header.component.html
@@ -5,8 +5,8 @@
                 <img src="assets/images/Findly_logo_blackFont.svg" class="logoKoreIcon" [routerLink]="['/apps']" routerLinkActive="active" skipLocationChange (click)="analyticsClick('apps')">
                 <div class="myappname" *ngIf="appName"><div  container="body" ngbTooltip="{{appName}}" class="name">{{appName}}</div></div>
                 <div class="headerTabsContainer">
-                    <div class="headerMenuTab" [routerLink]="['/summary']" skipLocationChange routerLinkActive="active" (click)="analyticsClick('summary')">Summary</div>
-                    <div class="headerMenuTab" [routerLink]="['/source']" skipLocationChange  routerLinkActive="active" (click)="analyticsClick('source')">
+                    <div class="headerMenuTab"  skipLocationChange routerLinkActive="active" (click)="analyticsClick('summary')">Summary</div>
+                    <div class="headerMenuTab" skipLocationChange  routerLinkActive="active" (click)="analyticsClick('source')">
                        <span >Indices</span>
                        <span routerLink="/content" class="d-none"></span>
                        <span routerLink="/faqs" class="d-none"></span>
@@ -32,8 +32,8 @@
                           </div>
                     </div>
                     <!-- <div class="headerMenuTab" [routerLink]="['/dashboard']" skipLocationChange routerLinkActive="active" (click)="analyticsClick('metrics')">Analytics</div> -->
-                    <div class="headerMenuTab" (click)="analyticsClick('experiments')">Experiments</div>
-                    <div class="headerMenuTab" (click)="analyticsClick('settings')">Settings <span class="statusIndicator d-none"></span></div>
+                    <div class="headerMenuTab" >Experiments</div>
+                    <div class="headerMenuTab" (click)="analyticsClick('/settings')">Settings </div>
                 </div>
             </div>
             <ul class="navbar-nav nav-flex-icons align-items-center right-menu-content flex-row justify-content-end"> 
