--- a/findly-builder/src/app/components/dashboard/dashboard.component.scss
+++ b/findly-builder/src/app/components/dashboard/dashboard.component.scss
@@ -338,7 +338,7 @@
     display: flex;
     align-items: center;
     position: relative;
-    bottom: 15%;
+    top: 20%;
     left: 17%;
     .legend-data{
         .indication{
