css for Channel

--- a/findly-builder/src/app/components/settings/settings.component.html
+++ b/findly-builder/src/app/components/settings/settings.component.html
@@ -154,7 +154,7 @@
         </div>
         <hr>
 
-        <div class="sel-title">JWT Signing Algorithm Used For Client App Authentication</div>
+        <div class="label-text">JWT Signing Algorithm Used For Client App Authentication</div>
         <div class="kr-sg-dropdowns">
             <div class="dropdown dropdown-open">
                 <button class="dropdown-toggle dropdown-input" data-toggle="dropdown"><span class="select-placeholder"> {{credntial.awt}}</span> </button>                                            
@@ -164,12 +164,12 @@
                 </ul>
               </div>
           </div>
-          <div class="switch-push">
+          <div class="switch-push-check">
             <label class="kr-sg-toggle with-label large">                                       
                 <input type="checkbox" [(ngModel)]="credntial.enabled">
                 <div class="slider"></div>
             </label>
-            <div class="label_text">Push Notification Enabled</div>
+            <span class="label_text">Push Notification Enabled</span>
           </div>
           
                                 
