--- a/findly-builder/src/app/components/settings/settings.component.scss
+++ b/findly-builder/src/app/components/settings/settings.component.scss
@@ -116,3 +116,10 @@
 .perfect-scroll-chanel{
     height: 80%;
 }
+.switch-push-check{
+    margin-top: 2%;
+    margin-left: -20px;
+    .label_text{
+        margin-left: 1%;
+    }
+}
