--- a/findly-builder/src/app/components/app-header/app-header.component.html
+++ b/findly-builder/src/app/components/app-header/app-header.component.html
@@ -5,8 +5,8 @@
                 <img src="assets/images/Findly_logo_blackFont.svg" class="logoKoreIcon" [routerLink]="['/apps']" routerLinkActive="active" skipLocationChange (click)="analyticsClick('apps')">
                 <div class="myappname" *ngIf="appName"><div  container="body" ngbTooltip="{{appName}}" class="name">{{appName}}</div></div>
                 <div class="headerTabsContainer">
-                    <div class="headerMenuTab"  skipLocationChange routerLinkActive="active" (click)="analyticsClick('summary')">Summary</div>
-                    <div class="headerMenuTab" skipLocationChange  routerLinkActive="active" (click)="analyticsClick('source')">
+                    <div class="headerMenuTab"  skipLocationChange routerLinkActive="active" (click)="analyticsClick('/summary')">Summary</div>
+                    <div class="headerMenuTab" skipLocationChange  routerLinkActive="active" (click)="analyticsClick('/source')">
                        <span >Indices</span>
                        <span routerLink="/content" class="d-none"></span>
                        <span routerLink="/faqs" class="d-none"></span>
@@ -24,10 +24,10 @@
                         <div class="dropdown dropdown-open">
                             <button class="dropdown-toggle dropdown-input cust-repeat-type" data-toggle="dropdown" > Analytics</button>                                            
                             <ul class="dropdown-menu content-menu content-width">                                               
-                              <li (click)="metricsOption('/dashboard')"><a>Dashboard</a></li>
-                              <li (click)="metricsOption('/userEngagement')"><a>User Engagement</a></li>
-                              <li (click)="metricsOption('/searchInsights')"><a>Search Insights</a></li>
-                              <li (click)="metricsOption('/resultInsights')"><a>Results Insights</a></li>
+                              <li (click)="analyticsClick('/dashboard')"><a>Dashboard</a></li>
+                              <li (click)="analyticsClick('/userEngagement')"><a>User Engagement</a></li>
+                              <li (click)="analyticsClick('/searchInsights')"><a>Search Insights</a></li>
+                              <li (click)="analyticsClick('/resultInsights')"><a>Results Insights</a></li>
                             </ul>
                           </div>
                     </div>
