--- a/findly-builder/src/app/components/weights/weights.component.html
+++ b/findly-builder/src/app/components/weights/weights.component.html
@@ -25,7 +25,7 @@
                         <div>{{weightModal.name}} 
                             <!-- <img src="assets/icons/warning_escalation.svg"> -->
                         </div>
-                        <div class="pre_defined" *ngIf="!weightModal.isField">PRE-DEFINED</div>
+                        <div class="pre_defined" *ngIf="!weightModal.isField">SYSTEM-DEFINED</div>
                     </div>
                     <div class="col-5 desc text-truncate">
                         <span *ngIf="currentEditIndex !== i">{{weightModal.desc}}</span>
