--- a/findly-builder/src/app/components/add-source/add-source.component.scss
+++ b/findly-builder/src/app/components/add-source/add-source.component.scss
@@ -18,6 +18,133 @@
         font-size: 12px;
     }  
 }
+.input-conditions{           
+    padding-right: 0;
+    .input-bg-sec{
+        width: 100%;
+        background: #F8F9FA;
+        border-radius: 4px;
+        padding: 16px 20px;
+        .search-content-sec{
+            align-items: center;
+            margin-bottom: 16px !important;
+            .title{
+                color: #9AA0A6;
+                font-weight: 500;
+                font-size: 12px;
+                line-height: 15px;
+            }
+        }
+        .setparameetres-sec{
+            align-items: center;                    
+            .title{
+                color: #9AA0A6;
+                font-weight: 500;
+                font-size: 12px;
+                line-height: 15px;
+            }                    
+        }
+        .tags{
+            padding-right: 0;
+            .chip-sys-data{
+                width: 100%;
+                background: #fff;
+            }
+        }
+        .action-scontent-sec{
+            align-items: center;
+            margin-bottom: 16px !important;
+            .title{
+                color: #9AA0A6;
+                font-weight: 500;
+                font-size: 12px;
+                line-height: 15px;
+            }
+            .right-side-sec{
+                app-range-slider{
+                    .custom-created-range-slider{
+                        .single-slider{
+                            width: 100%;
+                            margin: 0;
+                            .slider-track-high{
+                                background: #E4E5E7;
+                            }        
+                            .slider-selection{
+                                background: #0D6EFD !important;
+                            }                            
+                            .countThreshold{
+                                width: 100%;
+                                display: none;
+                            }                                    
+                            .slider-horizontal{
+                                width: 100%;
+                                .tooltip-main{
+                                    display: none;
+                                }
+                                .slider-tick, .slider-handle{
+                                    background: #0D6EFD !important;
+                                    box-shadow: 0px 0.25px 1px rgba(7, 55, 127, 0.25), 0px 0.85px 3px rgba(0, 0, 0, 0.19);
+                                }   
+                            }
+                            .slider-track{
+                                height: 2px;
+                                width: 100%;
+                                margin-top: -3px;
+                            }
+                        }                               
+                    }
+                }
+                .result-slider-title{
+                    color: #9AA0A6;
+                    font-weight: 500;
+                    font-size: 12px;
+                    line-height: 15px;
+                    position: relative;
+                    top: -2px;
+                }
+                .slider-count{
+                    color: #000000;
+                    font-weight: normal;
+                    font-size: 18px;
+                    line-height: 22px;
+                    padding-left: 5px;
+                }
+            }
+        }
+        .response-content-sec{
+            align-items: center;
+            margin-bottom: 16px !important;
+            .title{
+                color: #9AA0A6;
+                font-weight: 500;
+                font-size: 12px;
+                line-height: 15px;
+            }
+        }
+    }
+    .delete-rule{
+        margin-left: 10px;
+        cursor: pointer;
+    }
+}
+.dropdownDiv{
+    padding: 0 !important;
+    z-index: 999;
+    .kr-sg-dropdowns{
+        .dropdown-open {
+            .dropdown-input{
+                height: 30px;
+                line-height: 28px;
+            }
+        }
+    }
+    &::after{
+        display: none;
+    }
+}
+.mb-13{
+    margin-bottom: 13px;
+}
 .contentContainer{
     padding-left: 65px;
     // padding-top: 30px;
