--- a/findly-builder/src/app/components/traits/traits.component.html
+++ b/findly-builder/src/app/components/traits/traits.component.html
@@ -184,7 +184,7 @@
                             Add utterances or phrases
                         </div>
                         <div class="kr-sg-input-text">
-                            <input  maxlength="2048" type="text" autocomplete="off" placeholder="Create trait" class="input-text"
+                            <input  maxlength="2048" type="text" autocomplete="off" placeholder="Add utterance" class="input-text"
                             (keyup)='addUtterance(item.utterance,item.key,$event,traits.addEditTraits,index)' [(ngModel)]='item.utterance'
                             name='traitName'>
                         </div>
